# matrix-madlib-bot

./: .gitignore  README.md  main.py  pyproject.toml
madlib_bot/: __init__.py  bot.py  generate.py
tests/: test_generate.py
